# SONUS

./: .gitignore  CMakeLists.txt  README.md
android/: build.gradle
android/app/: build.gradle
android/app/src/main/java/com/sonus/: SonusApp.kt
android/app/src/main/java/com/sonus/audio/: AudioManager.kt
android/app/src/main/java/com/sonus/location/: LocationManager.kt
core/: CMakeLists.txt
core/include/sonus/: audio_decoder.hpp  audio_encoder.hpp  audio_utils.hpp  config.hpp  error.hpp  perf_monitor.hpp
core/src/: audio_decoder.cpp  audio_encoder.cpp  error.cpp
core/tests/: CMakeLists.txt  test_audio.cpp
docs/: README.md  android.md  ios.md
ios/Sonus/: AudioManager.swift  Info.plist  LocationManager.swift  SonusApp.swift
ios/Sonus.xcodeproj/: project.pbxproj
protocols/: SonoLink-v1.0.md
